// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package aggregation;

// For compatibility with protobuf lite.
option optimize_for = LITE_RUNTIME;

service Aggregator {
  // Aggregate partial report generated by the DPF protocol.
  rpc AggregateDpfPartialReport(AggregateDpfPartialReportRequest)
      returns (AggregateDpfPartialReportResponse) {}
}

message AggregateDpfPartialReportRequest {
  string partial_report_uri = 1;
  string partial_histogram_uri = 2;
  string expand_parameters_uri = 3;
  double epsilon = 4;
  string query_id = 5;
  int32 previous_prefix_length = 6;
  int32 prefix_length = 7;
  int32 key_bit_size = 8;
  int32 num_workers = 9;
}

message AggregateDpfPartialReportResponse {}
